Commit some code (unverified)

--- a/KubePlayground/Views/Home/JobHome.cshtml
+++ b/KubePlayground/Views/Home/JobHome.cshtml
@@ -29,36 +29,6 @@
                                 Dashboard <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke=""><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                                Orders
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke=""><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                                Products
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke=""><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                                Customers
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke=""><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-                                Reports
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke=""><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-                                Integrations
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -79,9 +49,7 @@
                     </div>
                 </div>
 
-                <div id="showLogs" style="min-height: 20em; max-height: 25em; overflow: scroll;white-space: nowrap; border: solid red 1px"></div>
-
-                <h2>Section title</h2>
+                <h2>Jobs</h2>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="table-responsive">
@@ -108,6 +76,14 @@
                         </div>
                     </div>
                 </div>
+
+                <hr />
+
+                <h2>Logs</h2>
+                <div class="row">
+                    <div id="showLogs" style="min-height: 20em; max-height: 25em; overflow: scroll; white-space: nowrap; border: solid red 1px"></div>
+                </div>
+
             </main>
         </div>
     </div>
